--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="container">
                 <a class="navbar-brand text-warning" href="#"><img src="./imagenes/lampara.jpg" alt="lampara" class="logo" />Electrosoluciones</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon bg-warning"></span>
+                <span class="navbar-toggler-icon bg-warning botonNav"></span>
                 </button> 
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto fw-bold">
@@ -40,7 +40,7 @@
     <main>
         <!-- Descripcion de la empresa -->
         <section class="somos">
-            <img src="./imagenes/logo.jpg" alt="logo" class="logo__somos" />
+            <img src="./imagenes/logo.jpg" alt="logo" class="somos__logo" />
             <div>
                 <h2 class="somos__titulo">Quienes somos?</h2>
                 <p class="somos__desc">Somos una empresa dedicada a la instalacion, mantenimiento y reparacion de equipos electricos. Nos caracterizamos por la calidad y seriedad de nuestro trabajo, nuestras recomendaciones nos avalan.
@@ -54,15 +54,15 @@
         <section>
         <h2 class="op__titulo">Opiniones</h2>
             <div class="opGrid">
-                <div class="opiniones">
-                    <h4 class="op__c">Juan.14</h4>
-                    <p class="descOpinion">Realizaron un excelente trabajo, muy prolijo y bien hecho. muy recomendables!</p>
-                    <h5 class="op__op">Opinion: Buena</h5>
+                <div class="opGrid__opiniones">
+                    <h4 class="opGrid__opiniones-cliente">Juan.14</h4>
+                    <p class="opGrid__opiniones-descrip">Realizaron un excelente trabajo, muy prolijo y bien hecho. muy recomendables!</p>
+                    <h5 class="opGrid__opiniones-calif">Opinion: Buena</h5>
                 </div>
-                <div class="opiniones">
-                    <h4 class="op__c">Jose_26</h4>
-                    <p class="descOpinion">Muy buen trabajo, mucha seriedad y responsabilidad. Solucionaron todo en muy poco tiempo, super recomendables!!!</p>
-                    <h5 class="op__op">Opinion: Buena</h5>
+                <div class="opGrid__opiniones">
+                    <h4 class="opGrid__opiniones-cliente">Jose_26</h4>
+                    <p class="opGrid__opiniones-descrip">Muy buen trabajo, mucha seriedad y responsabilidad. Solucionaron todo en muy poco tiempo, super recomendables!!!</p>
+                    <h5 class="opGrid__opiniones-calif">Opinion: Buena</h5>
                 </div>
             </div>
         </section>
@@ -94,20 +94,20 @@
         </section>
     </main>
     <!-- footer con sus link de contacto -->
-    <footer class="contactos d-flex align-items-center">
+    <footer class="footer d-flex align-items-center">
         <div class="container">
             <div class="row">
                 <div class= "col-md-3 col-sm-6 col-6 d-flex justify-content-center">
-                    <a href="./paginas/contactenos.html" class="efectoFoot text-decoration-none">Contactenos</a>
+                    <a href="./paginas/contactenos.html" class="footer__efecto text-decoration-none">Contactenos</a>
                 </div>
                 <div class= "col-md-3 col-sm-6 col-6 d-flex justify-content-center">
-                    <a href="https://www.facebook.com/profile.php?id=100063765990228" target="_blank" class=" efectoFoot"><i class="bi bi-facebook"></i></a>
+                    <a href="https://www.facebook.com/profile.php?id=100063765990228" target="_blank" class=" footer__efecto"><i class="bi bi-facebook"></i></a>
                 </div>
                 <div class= "col-md-3 col-sm-6 col-6 d-flex justify-content-center">
-                    <a href="" target="_blank" class="efectoFoot"><i class="bi bi-instagram"></i></a>
+                    <a href="" target="_blank" class="footer__efecto"><i class="bi bi-instagram"></i></a>
                 </div>
                 <div class= "col-md-3 col-sm-6 col-6 d-flex justify-content-center">
-                    <a href="" target="_blank" class="efectoFoot"><i class="bi bi-envelope"></i></a>
+                    <a href="" target="_blank" class="footer__efecto"><i class="bi bi-envelope"></i></a>
                 </div>
             </div>
         </div>
