--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -23,7 +23,7 @@
             <div class="container">
                 <a class="navbar-brand text-warning" href="#"><img src="../imagenes/lampara.jpg" alt="lampara" class="logo" />Electrosoluciones</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon bg-warning"></span>
+                <span class="navbar-toggler-icon bg-warning botonNav"></span>
                 </button> 
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto fw-bold">
@@ -39,136 +39,140 @@
     </header>
 
     <!-- Servicios prestados y sub servicios -->
-    <main class="servicios">
-        <section>
-            <h2>Servicios</h2>
-            <ol>
-                <li class="serv">Canalizacion de cañeria en losa
-                    <ul class="serv">
-                        <li>En losa con caño metalico</li>
-                        <li>En loseta con caño metalico</li>
-                    </ul>
-                </li>
-                <li class="serv">Amurado de cañeria en mamposteria
-                    <ul class="serv">
-                        <li>Sobre ladrillo comun</li>
-                        <li>Sobre ladrillo hueco</li>
-                    </ul>
-                </li>
-                <li class="serv">Amurado de cañeria a la vista
-                    <ul class="serv">
-                        <li>De metal</li>
-                        <li>De PVC</li>
-                        <li>Cablecanal</li>
-                    </ul>
-                </li>
-                <li class="serv">Cableado
-                    <ul class="serv">
-                        <li>Cableado en obra nueva con artefactos</li>
-                        <li>Cableado en obra nueva sin artefactos</li>
-                        <li>Recableado con artefactos</li>
-                        <li>Recableado sin artefactos</li>
-                    </ul>
-                </li>
-                <li class="serv">Tableros
-                    <ul class="serv">
-                        <li>Tableros trifasicos</li>
-                        <li>Tableros monofasicos</li>
-                        <li>Solo PAT</li>
-                        <li>Tableros seccionales</li>
-                        <li>Tableros especiales</li>
-                    </ul>
-                </li>
-                <li class="serv">Artefactos
-                    <ul class="serv">
-                        <li>Aplique simple</li>
-                        <li>Artefacto colgante</li>
-                        <li>Equipo de tubo led</li>
-                        <li>Ventilador de techo</li>
-                    </ul>
-                </li>
-            </ol>
-        </section>
-        <!-- Costos de materiales  y mano de obra -->
-        <section class="tablaServicios">
-            <h2 class="titulServ">Costos personal</h2>
-            <table border="2">
-                <thead>
-                    <tr>
-                        <th>Mano de obra por 8hs de labor</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Oficial especializado</td>
-                        <td>$5194</td>
-                    </tr>
-                    <tr>
-                        <td>Oficial electricista</td>
-                        <td>$4427</td>
-                    </tr>
-                    <tr>
-                        <td>Medio oficial electricista</td>
-                        <td>$4082</td>
-                    </tr>
-                    <tr>
-                        <td>Ayudante</td>
-                        <td>$3747</td>
-                    </tr>
-                </tbody>
-            </table>
-            
-            <h2 class="titulServ">Costos de servicios</h2>
-            <table border="2">
-                <thead>
-                    <tr>
-                        <th>Obra completa-Refaccion-Ampliacion</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Visita:inspec., eval., diag.</td>
-                        <td>$3097</td>
-                    </tr>
-                    <tr>
-                        <td>Urgencia</td>
-                        <td>$7422</td>
-                    </tr>
-                    <tr>
-                        <td>Unidad basica: 1 boca</td>
-                        <td>$6183</td>
-                    </tr>
-                    <tr>
-                        <td>Service-Instalacion</td>
-                        <td>$6183</td>
-                    </tr>
-                    <tr>
-                        <td>Hora de trabajo minimo</td>
-                        <td>$3097</td>
-                    </tr>
-                    <tr>
-                        <td>Hora de trabajo promedio</td>
-                        <td>$3500</td>
-                    </tr>
-                </tbody>
-            </table>
-        </section>
+    <main>
+        <div class="container">
+            <div class="servicios">
+                <section>
+                    <h2>Servicios</h2>
+                <ol>
+                    <li class="servicios__info">Canalizacion de cañeria en losa
+                        <ul class="servicios__info">
+                            <li>En losa con caño metalico</li>
+                            <li>En loseta con caño metalico</li>
+                        </ul>
+                    </li>
+                    <li class="servicios__info">Amurado de cañeria en mamposteria
+                        <ul class="servicios__info">
+                            <li>Sobre ladrillo comun</li>
+                            <li>Sobre ladrillo hueco</li>
+                        </ul>
+                    </li>
+                    <li class="servicios__info">Amurado de cañeria a la vista
+                        <ul class="servicios__info">
+                            <li>De metal</li>
+                            <li>De PVC</li>
+                            <li>Cablecanal</li>
+                        </ul>
+                    </li>
+                    <li class="servicios__info">Cableado
+                        <ul class="servicios__info">
+                            <li>Cableado en obra nueva con artefactos</li>
+                            <li>Cableado en obra nueva sin artefactos</li>
+                            <li>Recableado con artefactos</li>
+                            <li>Recableado sin artefactos</li>
+                        </ul>
+                    </li>
+                    <li class="servicios__info">Tableros
+                        <ul class="servicios__info">
+                            <li>Tableros trifasicos</li>
+                            <li>Tableros monofasicos</li>
+                            <li>Solo PAT</li>
+                            <li>Tableros seccionales</li>
+                            <li>Tableros especiales</li>
+                        </ul>
+                    </li>
+                    <li class="servicios__info">Artefactos
+                        <ul class="servicios__info">
+                            <li>Aplique simple</li>
+                            <li>Artefacto colgante</li>
+                            <li>Equipo de tubo led</li>
+                            <li>Ventilador de techo</li>
+                        </ul>
+                    </li>
+                </ol>
+            </section>
+            <!-- Costos de materiales  y mano de obra -->
+            <section class="tablaCostos">
+                <h2 class="tablaCostos__titulo">Costos personal</h2>
+                <table border="2">
+                    <thead>
+                        <tr>
+                            <th>Mano de obra por 8hs de labor</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Oficial especializado</td>
+                            <td>$5194</td>
+                        </tr>
+                        <tr>
+                            <td>Oficial electricista</td>
+                            <td>$4427</td>
+                        </tr>
+                        <tr>
+                            <td>Medio oficial electricista</td>
+                            <td>$4082</td>
+                        </tr>
+                        <tr>
+                            <td>Ayudante</td>
+                            <td>$3747</td>
+                        </tr>
+                    </tbody>
+                </table>
+                
+                <h2 class="tablaCostos__titulo">Costos de servicios</h2>
+                <table border="2">
+                    <thead>
+                        <tr>
+                            <th>Obra completa-Refaccion-Ampliacion</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Visita:inspec., eval., diag.</td>
+                            <td>$3097</td>
+                        </tr>
+                        <tr>
+                            <td>Urgencia</td>
+                            <td>$7422</td>
+                        </tr>
+                        <tr>
+                            <td>Unidad basica: 1 boca</td>
+                            <td>$6183</td>
+                        </tr>
+                        <tr>
+                            <td>Service-Instalacion</td>
+                            <td>$6183</td>
+                        </tr>
+                        <tr>
+                            <td>Hora de trabajo minimo</td>
+                            <td>$3097</td>
+                        </tr>
+                        <tr>
+                            <td>Hora de trabajo promedio</td>
+                            <td>$3500</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </section>
+            </div>
+        </div>
     </main>
     <!-- footer con sus link de contacto -->
-    <footer class="contactos d-flex align-items-center">
+    <footer class="footer d-flex align-items-center">
         <div class="container">
             <div class="row">
                 <div class= "col-md-3 col-sm-6 col-6  d-flex justify-content-center">
-                    <a href="./paginas/contactenos.html" class="efectoFoot text-decoration-none">Contactenos</a>
+                    <a href="./paginas/contactenos.html" class="footer__efecto text-decoration-none">Contactenos</a>
                 </div>
                 <div class= "col-md-3 col-sm-6 col-6  d-flex justify-content-center">
-                    <a href="https://www.facebook.com/profile.php?id=100063765990228" target="_blank" class=" efectoFoot"><i class="bi bi-facebook"></i></a>
+                    <a href="https://www.facebook.com/profile.php?id=100063765990228" target="_blank" class=" footer__efecto"><i class="bi bi-facebook"></i></a>
                 </div>
                 <div class= "col-md-3 col-sm-6 col-6  d-flex justify-content-center">
-                    <a href="" target="_blank" class="efectoFoot"><i class="bi bi-instagram"></i></a>
+                    <a href="" target="_blank" class="footer__efecto"><i class="bi bi-instagram"></i></a>
                 </div>
                 <div class= "col-md-3 col-sm-6 col-6  d-flex justify-content-center">
-                    <a href="" target="_blank" class="efectoFoot"><i class="bi bi-envelope"></i></a>
+                    <a href="" target="_blank" class="footer__efecto"><i class="bi bi-envelope"></i></a>
                 </div>
             </div>
         </div>
