--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Electrosoluciones</title>
+    <title>Electrosoluciones-Empresa de servicios eléctricos</title>
     <link rel="shortcut icon" href="./imagenes/lampara.jpg" type="image/x-icon" />
+    <meta name="description" content="Realizamos servicios eléctricos, mantenimiento y reparaciones en edificios, fábricas y plantas industriales, nuevas Instalaciones Eléctricas en su hogar. Brindamos soluciones con trabajos de calidad. Visita nuestra página!">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
@@ -42,8 +43,8 @@
         <section class="somos">
             <img src="./imagenes/logo.jpg" alt="logo" class="somos__logo" />
             <div>
-                <h2 class="somos__titulo">Quienes somos?</h2>
-                <p class="somos__desc">Somos una empresa dedicada a la instalacion, mantenimiento y reparacion de equipos electricos. Nos caracterizamos por la calidad y seriedad de nuestro trabajo, nuestras recomendaciones nos avalan.
+                <h1 class="somos__titulo">Quienes brindan soluciones?</h1>
+                <p class="somos__desc">Somos una empresa dedicada a los servicios electricos, instalacion, mantenimiento y reparaciones de equipos electricos. Nos caracterizamos por la calidad y seriedad de nuestro trabajo, nuestras recomendaciones nos avalan.
                     Trabajamos en obras nuevas y reacondicionamos existentes, los invitamos a que vean algunos de nuestros trabajos. Muchas gracias por visitarnos!!! 
                 </p>
             </div>
@@ -52,7 +53,7 @@
         <!-- Ultimos o mejores opiniones -->
 
         <section>
-        <h2 class="op__titulo">Opiniones</h2>
+        <h2 class="op__titulo">Recomendaciones de nuestros trabajos</h2>
             <div class="opGrid">
                 <div class="opGrid__opiniones">
                     <h4 class="opGrid__opiniones-cliente">Juan.14</h4>
@@ -70,7 +71,7 @@
         <!-- Ultimos trabajos o los mas grandes -->
 
         <section>
-            <h3 class="titulo__trab">Trabajos realizados</h3>
+            <h3 class="titulo__trab">Trabajos eléctricos realizados</h3>
             <div class="trabGrid">
                 <article class="trabajos">
                     <div class="card trabajos sombra" style="width: auto;">
