--- a/paginas/opiniones.html
+++ b/paginas/opiniones.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Opiniones</title>
-    
+    <title>Opiniones-Opiniones sobre trabajos eléctricos</title>
+    <meta name="description" content="Recomendaciones sobre los servicios eléctricos realizados, enterate de las soluciones brindadas por nuestros trabajos">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css"/>
@@ -40,7 +40,7 @@
     <main>
         <!-- Ultimos opiniones -->
         <div class="container">
-            <h2 class="op__titulo">Opiniones</h2>
+            <h1 class="op__titulo">Recomendaciones de nuestros trabajos</h1>
             <article class="opGrid">
                 <div class="opGrid__opiniones">
                     <h3 class="opGrid__opiniones-cliente">Juan.14</h3>
@@ -56,7 +56,7 @@
             <!-- formulario de opiniones -->
             <article>
                 <form action="" class="cuadroOp">
-                    <label for="opinion" class="cuadroOp__titulo">Ingrese su opinion</label>
+                    <label for="opinion" class="cuadroOp__titulo">Ingrese su opinion sobre los servicios</label>
                     <div>
                         <textarea name="opinion" id="opinion" cols="40" rows="10" placeholder="Opinion..."></textarea>
                     </div>
