--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Servicios</title>
+    <title>Servicios Eléctricos</title>
+    <meta name="description" content="Enterate de nuestros servicios y presupuestos de trabajos eléctricos">
     <link rel="shortcut icon" href="../imagenes/lampara.jpg" type="image/x-icon">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" />
@@ -43,7 +44,7 @@
         <div class="container">
             <div class="servicios">
                 <section>
-                    <h2>Servicios</h2>
+                    <h1 class="tablaCostos__titulo">Servicios Eléctricos</h1>
                 <ol>
                     <li class="servicios__info">Canalizacion de cañeria en losa
                         <ul class="servicios__info">
@@ -124,7 +125,7 @@
                 <table border="2">
                     <thead>
                         <tr>
-                            <th>Obra completa-Refaccion-Ampliacion</th>
+                            <th>Obra completa-Reparaciones-Ampliaciones</th>
                         </tr>
                     </thead>
                     <tbody>
