--- a/paginas/trabajos.realizados.html
+++ b/paginas/trabajos.realizados.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trabajos</title>
+    <title>Trabajos eléctricos realizados</title>
+    <meta name="description" content="Hecha un vistazo a las soluciones electricas brindadas mediante nuestros trabajos, realizamos instalacion y reparaciones">
     <link rel="shortcut icon" href="../imagenes/lampara.jpg" type="image/x-icon">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" />
@@ -41,12 +42,12 @@
     <!-- trabajos realizados -->
 
     <main>
-        <h2 class="titulo__trab">TRABAJOS REALIZADOS</h2>
+        <h1 class="titulo__trab">TRABAJOS ELECTRICOS REALIZADOS</h1>
         <section class="trab">
             <article class="trabajos">
                 <div class="card trabajos sombra" style="width: auto;">
                     <div id="carouselExampleControls" class="carousel slide " data-bs-ride="carousel">
-                        <div class="carousel-inner ">
+                        <div class="carousel-inner tamañoCarousel">
                             <div class="carousel-item active">
                                 <img src="../imagenes/bajada1.jpg" class="d-block  card-img-top imagenT" alt="bajada">
                             </div>
@@ -68,7 +69,7 @@
                     </div>
                     <div class="card-body w-100 tituloTarjeta">
                         <h5 class="card-title">BAJADA TRIFASICA</h5>
-                        <p class="card-text">Bajada para cables subterraneos de 70mm2</p>
+                        <p class="card-text">Bajada para cables de 70mm2</p>
                         <a href="./trabajos.realizados.html" class="btn w-100 boton">Ver mas</a>
                     </div>
                 </div>
@@ -77,7 +78,7 @@
             <article class="trabajos">
                 <div class="card trabajos sombra" style="width: auto;">
                     <div id="carouselExampleControls2" class="carousel slide" data-bs-ride="carousel">
-                        <div class="carousel-inner">
+                        <div class="carousel-inner tamañoCarousel">
                             <div class="carousel-item active">
                                 <img src="../imagenes/diseño1.jpg" class="d-block w-100 card-img-top imagenT" alt="lampDiseño">
                             </div>
@@ -108,7 +109,7 @@
             <article class="trabajos">
                 <div class="card trabajos sombra" style="width: auto;">
                     <div id="carouselExampleControls3" class="carousel slide" data-bs-ride="carousel">
-                        <div class="carousel-inner">
+                        <div class="carousel-inner tamañoCarousel">
                             <div class="carousel-item active">
                                 <img src="../imagenes/exterior1.jpg" class="d-block w-100 card-img-top imagenT" alt="instalacionExterior">
                             </div>
@@ -128,9 +129,9 @@
                             <span class="visually-hidden">Siguiente</span>
                         </button>
                     </div>
-                    <div class="card-body tituloTarjeta">
+                    <div class="card-body w-100 tituloTarjeta">
                         <h5 class="card-title">INSTALACION EXTERIOR</h5>
-                        <p class="card-text">Instalacion con caño PVC para exterior(patio-jardin)</p>
+                        <p class="card-text">Instalacion con caño PVC rigido</p>
                         <a href="./trabajos.realizados.html" class="btn w-100 boton">Ver mas</a>
                     </div>
                 </div>
@@ -139,15 +140,15 @@
             <article class="trabajos">
                 <div class="card trabajos sombra" style="width: auto;">
                     <div id="carouselExampleControls4" class="carousel slide" data-bs-ride="carousel">
-                        <div class="carousel-inner">
+                        <div class="carousel-inner tamañoCarousel">
                             <div class="carousel-item active">
-                                <img src="../imagenes/iluminacion1.jpg" class="d-block w-100 card-img-top" alt="IluminacionDpto">
+                                <img src="../imagenes/iluminacion1.jpg" class="d-block w-100 card-img-top imagenT" alt="IluminacionDpto">
                             </div>
                             <div class="carousel-item">
-                                <img src="../imagenes/iluminacion2.jpg" class="d-block w-100 card-img-top" alt="IluminacionDpto">
+                                <img src="../imagenes/iluminacion2.jpg" class="d-block w-100 card-img-top imagenT" alt="IluminacionDpto">
                             </div>
                             <div class="carousel-item">
-                                <img src="../imagenes/iluminacion3.jpg" class="d-block w-100 card-img-top" alt="IluminacionDpto">
+                                <img src="../imagenes/iluminacion3.jpg" class="d-block w-100 card-img-top imagenT" alt="IluminacionDpto">
                             </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls4" data-bs-slide="prev">
@@ -159,9 +160,9 @@
                             <span class="visually-hidden">Siguiente</span>
                         </button>
                     </div>
-                    <div class="card-body tituloTarjeta">
+                    <div class="card-body w-100 tituloTarjeta">
                         <h5 class="card-title">ILUMINACION</h5>
-                        <p class="card-text">Colocacion de luminarias en departamento a estrenar</p>
+                        <p class="card-text">Colocacion de luminarias en departamento</p>
                         <a href="./trabajos.realizados.html" class="btn w-100 boton">Ver mas</a>
                     </div>
                 </div>
@@ -170,15 +171,15 @@
             <article class="trabajos">
                 <div class="card trabajos sombra" style="width: auto;">
                     <div id="carouselExampleControls5" class="carousel slide" data-bs-ride="carousel">
-                        <div class="carousel-inner">
+                        <div class="carousel-inner tamañoCarousel">
                             <div class="carousel-item active">
-                                <img src="../imagenes/lamparas1.jpg" class="d-block w-100 card-img-top" alt="lucesLed">
+                                <img src="../imagenes/lamparas1.jpg" class="d-block w-100 card-img-top imagenT" alt="lucesLed">
                             </div>
                             <div class="carousel-item">
-                                <img src="../imagenes/lamparas2.jpg" class="d-block w-100 card-img-top" alt="lucesLed">
+                                <img src="../imagenes/lamparas2.jpg" class="d-block w-100 card-img-top imagenT" alt="lucesLed">
                             </div>
                             <div class="carousel-item">
-                                <img src="../imagenes/lamparas3.jpg" class="d-block w-100 card-img-top" alt="lucesLed">
+                                <img src="../imagenes/lamparas3.jpg" class="d-block w-100 card-img-top imagenT" alt="lucesLed">
                             </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls5" data-bs-slide="prev">
@@ -190,7 +191,7 @@
                             <span class="visually-hidden">Siguiente</span>
                         </button>
                     </div>
-                    <div class="card-body tituloTarjeta">
+                    <div class="card-body w-100 tituloTarjeta">
                         <h5 class="card-title">REFLECTORES LED</h5>
                         <p class="card-text">Cambio lámparas de vapor de mercurio por led</p>
                         <a href="./trabajos.realizados.html" class="btn w-100 boton">Ver mas</a>
@@ -201,15 +202,15 @@
             <article class="trabajos">
                 <div class="card trabajos sombra" style="width: auto;">
                     <div id="carouselExampleControls6" class="carousel slide" data-bs-ride="carousel">
-                        <div class="carousel-inner">
+                        <div class="carousel-inner tamañoCarousel">
                             <div class="carousel-item active">
-                                <img src="../imagenes/tablero seccional 1.jpg" class="d-block w-100 card-img-top" alt="TableroSeccional">
+                                <img src="../imagenes/tablero seccional 1.jpg" class="d-block w-100 card-img-top imagenT" alt="TableroSeccional">
                             </div>
                             <div class="carousel-item">
-                                <img src="../imagenes/tablero seccional 2.jpg" class="d-block w-100 card-img-top" alt="TableroSeccional">
+                                <img src="../imagenes/tablero seccional 2.jpg" class="d-block w-100 card-img-top imagenT" alt="TableroSeccional">
                             </div>
                             <div class="carousel-item">
-                                <img src="../imagenes/tablero seccional 3.jpg" class="d-block w-100 card-img-top" alt="TableroSeccional">
+                                <img src="../imagenes/tablero seccional 3.jpg" class="d-block w-100 card-img-top imagenT " alt="TableroSeccional">
                             </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls6" data-bs-slide="prev">
@@ -221,7 +222,7 @@
                             <span class="visually-hidden">Siguiente</span>
                         </button>
                     </div>
-                    <div class="card-body tituloTarjeta">
+                    <div class="card-body w-100 tituloTarjeta">
                         <h5 class="card-title">ARMADO DE TABLERO</h5>
                         <p class="card-text">Armado de tablero seccional en obra nueva</p>
                         <a href="./trabajos.realizados.html" class="btn w-100 boton">Ver mas</a>
