agregado de sitemap

--- a/paginas/opiniones.html
+++ b/paginas/opiniones.html
@@ -56,7 +56,7 @@
             <!-- formulario de opiniones -->
             <article>
                 <form action="" class="cuadroOp">
-                    <label for="opinion" class="cuadroOp__titulo">Ingrese su opinion sobre los servicios</label>
+                    <label for="opinion" class="cuadroOp__titulo">Ingrese su opinión sobre los servicios</label>
                     <div>
                         <textarea name="opinion" id="opinion" cols="40" rows="10" placeholder="Opinion..."></textarea>
                     </div>
