--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Servicios Eléctricos</title>
-    <meta name="description" content="Enterate de nuestros servicios y presupuestos de trabajos eléctricos">
+    <meta name="description" content="Entérate de nuestros servicios, recomendaciones y presupuestos de trabajos eléctricos">
     <link rel="shortcut icon" href="../imagenes/lampara.jpg" type="image/x-icon">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" />
@@ -46,19 +46,19 @@
                 <section>
                     <h1 class="tablaCostos__titulo">Servicios Eléctricos</h1>
                 <ol>
-                    <li class="servicios__info">Canalizacion de cañeria en losa
+                    <li class="servicios__info">Canalizacion de cañería en losa
                         <ul class="servicios__info">
-                            <li>En losa con caño metalico</li>
-                            <li>En loseta con caño metalico</li>
+                            <li>En losa con caño metálico</li>
+                            <li>En loseta con caño metálico</li>
                         </ul>
                     </li>
-                    <li class="servicios__info">Amurado de cañeria en mamposteria
+                    <li class="servicios__info">Amurado de cañería en mampostería
                         <ul class="servicios__info">
-                            <li>Sobre ladrillo comun</li>
+                            <li>Sobre ladrillo común</li>
                             <li>Sobre ladrillo hueco</li>
                         </ul>
                     </li>
-                    <li class="servicios__info">Amurado de cañeria a la vista
+                    <li class="servicios__info">Amurado de cañería a la vista
                         <ul class="servicios__info">
                             <li>De metal</li>
                             <li>De PVC</li>
@@ -75,8 +75,8 @@
                     </li>
                     <li class="servicios__info">Tableros
                         <ul class="servicios__info">
-                            <li>Tableros trifasicos</li>
-                            <li>Tableros monofasicos</li>
+                            <li>Tableros trifásicos</li>
+                            <li>Tableros monofásicos</li>
                             <li>Solo PAT</li>
                             <li>Tableros seccionales</li>
                             <li>Tableros especiales</li>
