--- a/paginas/trabajos.realizados.html
+++ b/paginas/trabajos.realizados.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trabajos eléctricos realizados</title>
-    <meta name="description" content="Hecha un vistazo a las soluciones electricas brindadas mediante nuestros trabajos, realizamos instalacion y reparaciones">
+    <meta name="description" content="Hecha un vistazo a las soluciones eléctricas brindadas mediante nuestros trabajos, realizamos instalación y reparaciones">
     <link rel="shortcut icon" href="../imagenes/lampara.jpg" type="image/x-icon">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" />
