--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Electrosoluciones-Empresa de servicios eléctricos</title>
     <link rel="shortcut icon" href="./imagenes/lampara.jpg" type="image/x-icon" />
-    <meta name="description" content="Realizamos servicios eléctricos, mantenimiento y reparaciones en edificios, fábricas y plantas industriales, nuevas Instalaciones Eléctricas en su hogar. Brindamos soluciones con trabajos de calidad. Visita nuestra página!">
+    <meta name="description" content="Realizamos servicios eléctricos, mantenimiento y reparaciones en edificios, fábricas y plantas industriales, nuevas instalaciones eléctricas en su hogar. Brindamos soluciones con trabajos de calidad. Visita nuestra página!">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
@@ -44,7 +44,7 @@
             <img src="./imagenes/logo.jpg" alt="logo" class="somos__logo" />
             <div>
                 <h1 class="somos__titulo">Quienes brindan soluciones?</h1>
-                <p class="somos__desc">Somos una empresa dedicada a los servicios electricos, instalacion, mantenimiento y reparaciones de equipos electricos. Nos caracterizamos por la calidad y seriedad de nuestro trabajo, nuestras recomendaciones nos avalan.
+                <p class="somos__desc">Somos una empresa dedicada a los servicios eléctricos, instalación, mantenimiento y reparaciones de equipos eléctricos. Nos caracterizamos por la calidad y seriedad de nuestro trabajo, nuestras recomendaciones nos avalan.
                     Trabajamos en obras nuevas y reacondicionamos existentes, los invitamos a que vean algunos de nuestros trabajos. Muchas gracias por visitarnos!!! 
                 </p>
             </div>
