--- a/paginas/contactenos.html
+++ b/paginas/contactenos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contactenos-Escribinos para saber mas sobre nuestros servicios</title>
+    <title>Contactenos-Escribinos para saber más sobre nuestros servicios</title>
     <meta name="description" content="Rellena el formulario para saber más de nuestros servicios, trabajos y obtener tu presupuesto">
     <link rel="shortcut icon" href="../imagenes/lampara.jpg" type="image/x-icon">
     
@@ -42,7 +42,7 @@
     <main class="mainContactenos">
         <!-- formulario de contacto -->
         <article class="mainContactenos__contacto">
-            <h1 class="mainContactenos__contacto-titulo">Contactanos por los servicios</h1>
+            <h1 class="mainContactenos__contacto-titulo">Contáctanos por los servicios</h1>
             <form action="" method="" enctype="" class="mainContactenos__contacto-contactoGrid" >
                     <label for="nombre">Ingrese su nombre</label>
                     <input type="text" id="nombre" name="nombre" placeholder="Nombre..." class="mainContactenos__contacto-animacion"/>
