--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Electrosoluciones-Empresa de servicios eléctricos</title>
     <link rel="shortcut icon" href="./imagenes/lampara.jpg" type="image/x-icon" />
+    <meta name="keywords" content="SERVICIOS, ELECTRICOS, TRABAJOS, REPARACIONES, SOLUCIONES">
     <meta name="description" content="Realizamos servicios eléctricos, mantenimiento y reparaciones en edificios, fábricas y plantas industriales, nuevas instalaciones eléctricas en su hogar. Brindamos soluciones con trabajos de calidad. Visita nuestra página!">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" />
@@ -21,7 +22,7 @@
     <header class="header sticky-top">
         <nav class="navbar navbar-expand-md">
             <div class="container">
-                <a class="navbar-brand text-warning" href="#"><img src="./imagenes/lampara.jpg" alt="lampara" class="logo" />Electrosoluciones</a>
+                <a class="navbar-brand text-warning" href="./index.html"><img src="./imagenes/lampara.jpg" alt="lampara" class="logo" />Electrosoluciones</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon bg-warning botonNav"></span>
                 </button> 
