--- a/paginas/contactenos.html
+++ b/paginas/contactenos.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contactenos-Escribinos para saber más sobre nuestros servicios</title>
+    <meta name="keywords" content="SERVICIOS, ELECTRICOS, TRABAJOS, REPARACIONES, SOLUCIONES">
     <meta name="description" content="Rellena el formulario para saber más de nuestros servicios, trabajos y obtener tu presupuesto">
     <link rel="shortcut icon" href="../imagenes/lampara.jpg" type="image/x-icon">
     
@@ -22,7 +23,7 @@
     <header class="header sticky-top">
         <nav class="navbar navbar-expand-md">
             <div class="container">
-                <a class="navbar-brand text-warning" href="#"><img src="../imagenes/lampara.jpg" alt="lampara" class="logo" />Electrosoluciones</a>
+                <a class="navbar-brand text-warning" href="../index.html"><img src="../imagenes/lampara.jpg" alt="lampara" class="logo" />Electrosoluciones</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon bg-warning botonNav"></span>
                 </button> 
@@ -76,7 +77,7 @@
         <div class="container">
             <div class="row">
                 <div class= "col-md-3 col-sm-6 col-6  d-flex justify-content-center">
-                    <a href="./paginas/contactenos.html" class="footer__efecto text-decoration-none">Contactenos</a>
+                    <a href="./contactenos.html" class="footer__efecto text-decoration-none">Contactenos</a>
                 </div>
                 <div class= "col-md-3 col-sm-6 col-6  d-flex justify-content-center">
                     <a href="https://www.facebook.com/profile.php?id=100063765990228" target="_blank" class=" footer__efecto"><i class="bi bi-facebook"></i></a>
