--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 </article>
                 <article class="trabajos">
                     <div class="card trabajos sombra imagenT" style="width:auto;">
-                        <img src="./imagenes/tablero seccional 3.jpg" class="card-img-top imagenT" alt="imgTrabajo">
+                        <img src="./imagenes/tablero seccional 3.jpg" class="card-img-top" alt="imgTrabajo">
                         <div class="card-body w-100">
                             <h5 class="card-title tituloTarjeta">Armado de tablero</h5>
                             <a href="./paginas/trabajos.realizados.html" class="btn boton w-100">Ver mas</a>
