--- a/paginas/trabajos.realizados.html
+++ b/paginas/trabajos.realizados.html
@@ -149,7 +149,7 @@
                                 <img src="../imagenes/iluminacion2.jpg" class="d-block w-100 card-img-top imagenT" alt="IluminacionDpto">
                             </div>
                             <div class="carousel-item">
-                                <img src="../imagenes/iluminacion3.jpg" class="d-block w-100 card-img-top imagenT" alt="IluminacionDpto">
+                                <img src="../imagenes/iluminacion3.jpg" class="img-fluid d-block w-100 card-img-top imagenT" alt="IluminacionDpto">
                             </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls4" data-bs-slide="prev">
